@startuml
hide methods
hide stereotypes
skinparam linetype ortho
skinparam classAttributeIconSize 0

entity "teacher_staff" as teacher_staff {
  + teacher_staff_id : BIGINT <<PK>>
  --
  siape  : VARCHAR(60) <<UQ>>
  email  : VARCHAR(60) <<UQ>>
  password : VARCHAR(60)
  name   : VARCHAR(60)
  phone  : VARCHAR(60)
}

entity "student" as student {
  + student_id : BIGINT <<PK>>
  --
  enrollment : VARCHAR(60) <<UQ>>
  name   : VARCHAR(60)
  email  : VARCHAR(60) <<UQ>>
  password : VARCHAR(60)
  phone  : VARCHAR(60)
  birthdate : DATE
}

entity "company" as company {
  + company_id : BIGINT <<PK>>
  --
  cnpj  : VARCHAR(60) <<UQ>>
  name  : VARCHAR(60)
  email : VARCHAR(60) <<UQ>>
  password : VARCHAR(60)
  phone : VARCHAR(60)
}

entity "external_user" as external_user {
  + external_user_id : BIGINT <<PK>>
  --
  name  : VARCHAR(60)
  email : VARCHAR(60) <<UQ>>
  password : VARCHAR(60)
  phone : VARCHAR(60)
}

entity "idea" as idea {
  + idea_id : BIGINT <<PK>>
  --
  proposer        : VARCHAR(60)
  target_audience : VARCHAR(60)
  justification   : TEXT
  title           : VARCHAR(60)
  objective       : TEXT
  subtitle        : VARCHAR(60)
  area            : VARCHAR(60)
  description     : TEXT
  type            : ENUM('Teaching','Research','Extension')
  student_id      : BIGINT <<FK>>
  teacher_id      : BIGINT <<FK>>
}

entity "project" as project {
  + project_id : BIGINT <<PK>>
  --
  title                 : VARCHAR(60)
  subtitle              : VARCHAR(60)
  coordinator           : VARCHAR(63)
  description           : TEXT
  timeline              : VARCHAR(255)
  external_link         : VARCHAR(255)
  duration              : VARCHAR(255)
  image                 : VARCHAR(255)
  complementary_hours   : VARCHAR(255)
  scholarship_available : BOOLEAN
  scholarship_type      : VARCHAR(255)
  salary                : DECIMAL(10,2)
  requirements          : TEXT
  scholarship_quantity  : INT
  project_type          : ENUM('Research','Extension','Educational','Teaching')
}

entity "fellow" as fellow {
  + project_id : BIGINT <<PK,FK>>
  + student_id : BIGINT <<PK,FK>>
  --
  cpf               : VARCHAR(20) <<UQ>>
  lattes_curriculum : VARCHAR(255)
}

entity "participant" as participant {
  + participant_id : BIGINT <<PK>>
  --
  cpf   : VARCHAR(20) <<UQ>>
  name  : VARCHAR(63)
  role  : VARCHAR(60)
  phone : VARCHAR(20)
  project_id : BIGINT <<FK>>
}


entity "company_project" as company_project {
  + project_id : BIGINT <<PK,FK>>
  + company_id : BIGINT <<PK,FK>>
}

entity "research" as research {
  + research_id : BIGINT <<PK>>
  --
  project_id : BIGINT <<FK>>
  research_objective     : VARCHAR(300)
  research_justification : VARCHAR(600)
  research_discipline    : VARCHAR(200)
}

entity "educational" as educational {
  + educational_id : BIGINT <<PK>>
  --
  project_id : BIGINT <<FK>>
  educational_slots          : INTEGER
  educational_justification  : VARCHAR(600)
  educational_course         : VARCHAR(200)
}

entity "extension" as extension {
  + extension_id : BIGINT <<PK>>
  --
  project_id : BIGINT <<FK>>
  extension_target_audience  : VARCHAR(200)
  extension_slots            : INTEGER
  extension_selection_process: VARCHAR(600)
}

' Relationships
student    ||--o{ idea           : student_id
teacher_staff ||--o{ idea        : teacher_id

project    ||--o{ fellow        : project_id
student    ||--o{ fellow        : student_id

project    ||--o{ participant   : project_id

company    ||--o{ company_project : company_id
project    ||--o{ company_project : project_id

project    ||--o{ research      : project_id
project    ||--o{ educational   : project_id
project    ||--o{ extension     : project_id

@enduml
